# email-sleuth

./: .gitignore  Cargo.toml  README.md  email-sleuth.toml  setup.sh
.github/workflows/: release.yaml
src/: lib.rs  main.rs  sleuth.rs  smtp.rs
src/core/: error.rs  mod.rs  models.rs  sleuth.rs
src/core/config/: builder.rs  file.rs  loading.rs  mod.rs  validation.rs
src/service/: chromedriver.rs  mod.rs
src/utils/: dns.rs  domain.rs  mod.rs  patterns.rs
src/utils/smtp/: client.rs  error.rs  mod.rs  result.rs
src/verification/: api.rs  mod.rs
src/verification/headless/: client.rs  mod.rs
src/verification/headless/providers/: microsoft.rs  mod.rs  yahoo.rs
src/verification/headless/utils/: browser.rs  mod.rs  selectors.rs
